observability/prometheus-operator/kubernetes_monitoring/staging-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    monitoring: prometheus
