observability/prometheus-operator/kubernetes_monitoring/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
       - name: myapp
         image: amirul1994/go-prom:1.0
         imagePullPolicy: Always
         ports:
          - name: http
            containerPort: 8080
          - name: http-metrics
            containerPort: 8081
         resources:
           requests:
             memory: 256Mi
             cpu: 200m
           limits:
             memory: 256Mi
             cpu: 200m
