observability/prometheus-operator/kubernetes_monitoring/prom-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: staging
  name: myapp-prom
  labels:
    app: myapp-monitoring
spec:
  type: ClusterIP
  ports:
    - name: http-metrics
      port: 8081
      targetPort: http-metrics
  selector:
    app: myapp
