observability/prometheus-operator/kubernetes_monitoring/prometheus-operated-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"creationTimestamp":"2025-01-19T10:34:58Z","labels":{"operated-prometheus":"true"},"name":"prometheus-operated","namespace":"monitoring","ownerReferences":[{"apiVersion":"monitoring.coreos.com/v1","kind":"Prometheus","name":"main","uid":"29cd8170-737c-451d-af09-a6b78d36c11b"}],"resourceVersion":"391473","uid":"006d9268-d16e-41f9-b11f-682df8d0b1fb"},"spec":{"internalTrafficPolicy":"Cluster","ipFamilies":["IPv4"],"ipFamilyPolic [...]
  creationTimestamp: "2025-01-20T03:40:27Z"
  labels:
    operated-prometheus: "true"
  name: prometheus-operated
  namespace: monitoring
  ownerReferences:
  - apiVersion: monitoring.coreos.com/v1
    kind: Prometheus
    name: main
    uid: 29cd8170-737c-451d-af09-a6b78d36c11b
  resourceVersion: "426532"
  uid: a5c6d505-e698-4494-8f54-e9f4ccfa1fb8
spec:
  clusterIP: 10.101.253.3
  clusterIPs:
  - 10.101.253.3
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: web
    nodePort: 30001  # Add this line
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    app.kubernetes.io/name: prometheus
  sessionAffinity: None
  type: NodePort  # Change from ClusterIP to NodePort
status:
  loadBalancer: {}
