observability/prometheus-operator/kubernetes_monitoring/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: staging
  name: myapp
spec:
  type: ClusterIP
  ports:
   - name: http
     port: 8080
     targetPort: http
  selector:
    app: myapp
